add some features

--- a/todo
+++ b/todo
@@ -1,2 +1,15 @@
 # validator input
-# auto create profile_user
+
+# move image to user id folder
+# move like_post to comment table
+
+# fix comment + like
+# edit post
+
+# optimalkan post feed jadikan 1 fungsi saja
+# fix notifikasi
+
+
+# judul tab dinamik
+
+# add search fitur
