--- a/todo
+++ b/todo
@@ -9,12 +9,13 @@
 # optimalkan post feed jadikan 1 fungsi saja
 # fix notifikasi
 
-
 # judul tab dinamik
 
 # add search fitur
 
 # add kategori
+
+# add product
 
 9tre[Iv9Btfa
 
