add ajax + title

--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
 # validator input
 
 # move image to user id folder
-# move like_post to comment table
+ move like_post to comment table
 
 # fix comment + like
 # edit post
@@ -15,7 +15,7 @@
 
 # add kategori
 
-# add product
+# add product 
 
 9tre[Iv9Btfa
 
