add image compress

--- a/todo
+++ b/todo
@@ -21,3 +21,8 @@
 
 # bug
 - auto love saat komen
+
+#add recaptcha
+
+6Lf_O6cUAAAAAEfzWGiu61Be1hirHXfWUfbHem3e (client)
+6Lf_O6cUAAAAAPgHq3fvDu9zWHvJ30aCoq8LyZAM (server)
